--- a/src/app/administracion/modales/dir_grado/modal-asignar-grado/modal-asignar-grado.component.html
+++ b/src/app/administracion/modales/dir_grado/modal-asignar-grado/modal-asignar-grado.component.html
@@ -2,73 +2,70 @@
 
 <mat-dialog-content>
   <mat-tab-group>
-    <mat-tab label="Buscar Docente">
-      <div class="p-4">
-        <!-- Aquí irá la interfaz para buscar y seleccionar docente -->
-        <p>Contenido para buscar docentes...</p>
-      </div>
-    </mat-tab>
+
 
     <mat-tab label="Grados Disponibles">
-       <mat-divider></mat-divider>
+      <mat-divider></mat-divider>
 
-        <div>
+      <div>
 
-            <!-- Input de búsqueda -->
-            <input matInput (keyup)="applyGlobalFilter($event)" placeholder="Buscar" class="global-filter">
-        </div>
+        <!-- Input de búsqueda -->
+        <input matInput (keyup)="applyGlobalFilter($event)" placeholder="Buscar" class="global-filter">
+      </div>
 
-        <!-- Tabla de estudiantes -->
-        <div class="table-container">
-            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-                <ng-container matColumnDef="Grado">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                    <td mat-cell *matCellDef="let profesor"> {{ profesor.tipo_grado }} </td>
-                </ng-container>
-                <ng-container matColumnDef="Curso">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                    <td mat-cell *matCellDef="let profesor"> {{ profesor.nombre }} </td>
-                </ng-container>
-             <ng-container matColumnDef="Director de grado">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header> Director de grado </th>
-  <td mat-cell *matCellDef="let profesor">
-    {{ profesor.profesor_id ? profesor.profesor_id : 'Aún no tiene asignado director' }}
-  </td>
-</ng-container>
+      <!-- Tabla de estudiantes -->
+      <div class="table-container">
+        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+          <ng-container matColumnDef="Grado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Grado </th>
+            <td mat-cell *matCellDef="let profesor"> {{ profesor.tipo_grado-1 }} </td>
+          </ng-container>
+          <ng-container matColumnDef="Curso">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Detalle </th>
+            <td mat-cell *matCellDef="let profesor"> {{ profesor.nombre }} </td>
+          </ng-container>
+          <ng-container matColumnDef="Director de grado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Director de grado </th>
+            <td mat-cell *matCellDef="let profesor">
+              {{ profesor.profesor_id ? profesor.profesor.nombre : 'Aún no tiene asignado director' }}
+            </td>
+          </ng-container>
 
-<ng-container matColumnDef="Sede">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede </th>
-  <td mat-cell *matCellDef="let profesor">
-    {{ profesor.sede_info?.detalle ? profesor.sede_info.detalle : 'Aún no tiene sede' }}
-  </td>
-</ng-container>
+          <ng-container matColumnDef="Sede">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede </th>
+            <td mat-cell *matCellDef="let profesor">
+              {{ profesor.sede_info?.detalle ? profesor.sede_info.detalle : 'Aún no tiene sede' }}
+            </td>
+          </ng-container>
 
-                <ng-container matColumnDef="Opciones">
-                    <th mat-header-cell *matHeaderCellDef> Opciones </th>
-                    <td mat-cell *matCellDef="let profesor">
-                        <!-- Botón para asignar grado -->
-                        <button mat-icon-button color="primary" 
-                            matTooltip="Asignar grado">
-                            <i class="fas fa-user-graduate"></i>
-                        </button>
-                        &nbsp;
-                        <!-- Botón para asignar asignaturas -->
-                        <button mat-icon-button color="accent" >
-                            <i class="fas fa-book"></i>
-                        </button>
-                    </td>
-                </ng-container>
+          <ng-container matColumnDef="Opciones">
+            <th mat-header-cell *matHeaderCellDef> Opciones </th>
+            <td mat-cell *matCellDef="let profesor">
+              <span style="display: flex; gap: 0.5rem;">
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
+                <a mat-button class="btn btn-success btn-sm"*ngIf="!profesor.profesor_id"  (click)="asignarSede_Director(profesor)">
+                  <i class="fa fa-user-graduate"></i>
+                </a>
 
-            <mat-paginator [pageSize]="15" [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
-        </div>
+
+                <a mat-button class="btn btn-danger btn-sm" *ngIf="profesor.profesor_id"(click)="deleteSede_Director(profesor)">
+                  <i class="fa fa-trash"></i>
+                </a>
+              </span>
+            </td>
+
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSize]="15" [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
+      </div>
     </mat-tab>
   </mat-tab-group>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancelar</button>
+ <button mat-button class="btn btn-primary" mat-dialog-close>Aceptar</button>
 </mat-dialog-actions>
