--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -30,16 +30,12 @@
     <a *ngIf="mostrarTab3===true" (click)="navigateTo('administracion')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Administracion
     </a>
-    <a *ngIf="mostrarTab3" (click)="isAdminDropdownOpen = !isAdminDropdownOpen" class="w3-bar-item w3-button">
-      <i class="fas fa-cogs"></i> &nbsp; Administración academica
-      <span style="float: right;">▼</span>
+       <a *ngIf="mostrarTab1===true" (click)="navigateTo('profesores')" class="w3-bar-item w3-button">
+      <i class='fas fa-cogs'></i> &nbsp; Docentes asignación
     </a>
-    
-    <!-- Submenú desplegable -->
-    <div *ngIf="isAdminDropdownOpen" style="padding-left: 15px;">
-      <a (click)="navigateTo('administracion_academica/docentes')" class="w3-bar-item w3-button">Docentes</a>
-      <a (click)="navigateTo('administracion_academica/estudiantes')" class="w3-bar-item w3-button">Estudiantes</a>
-    </div>
+          <a *ngIf="mostrarTab2===true" (click)="navigateTo('estudiantes')" class="w3-bar-item w3-button">
+      <i class='fas fa-cogs'></i> &nbsp; Estudiantes
+    </a>
     
   </div>
   
