--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 
 .header {
-  background: linear-gradient(20deg, #09729f 40%, #ceb62e 60%);
+  background: #2a81478e;
   color: rgb(0, 0, 0);
   padding: 10px 20px;
   display: flex;
