--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,5 +1,5 @@
 .login-container {
-  background: linear-gradient(to bottom, #1da6fc88, #ffd90077);
+  background: #2a81478e;
   padding: 20px;
   height: 100vh;
   margin: auto;
@@ -9,7 +9,18 @@
   align-items: center;
   justify-content: center;
   gap: 50px; /* Espacio entre el formulario y el carrusel */
+  font-family: "Red Hat Text", sans-serif;
+  font-size: 16px;
+  font-weight: 100;
 }
+
+.grid1 {
+  background-color: #fff;
+  z-index: 2147483647;
+  position: relative;
+}
+
+
   .icono{
     width: 100px;
     height: 100px;
@@ -29,22 +40,14 @@ img {
   width: 100%;
   height: 100%;
   border-radius: 20px;
+  object-fit: cover;
 }
 @media (max-width: 760px) {
   .carrusel {
  display: none;
 
 }
-form {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  width: 90%;
-  height: 70%;
-  align-items: center;
-  background-color: #2a81478e;
-  border-radius: 20px;
-}
+
   
 }
 form {
@@ -54,16 +57,17 @@ form {
   width: 350px;
   height: 70%;
   align-items: center;
-  background-color: #2a81478e;
+  ;
   border-radius: 20px;
 }
   
   label {
     font-size: 16px;
-    font-weight: bold;
-    color: #333;
+    font-weight:500;
+    color: rgb(255, 255, 255);
     margin-bottom: 5px;
     text-align: left;
+  font-family: "Red Hat Text", sans-serif;
   }
   
   input {
@@ -71,11 +75,12 @@ form {
     margin-bottom: 15px;
     border: 2px solid #fff;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 18px;
+    width: 90%;
   }
   
   button {
-    background-color: #0056b3; /* Azul más oscuro */
+    background-color: #04680c; /* Azul más oscuro */
     color: white;
     border: none;
     padding: 12px;
@@ -86,7 +91,7 @@ form {
   }
   
   button:hover {
-    background-color: #004494; /* Un azul más fuerte */
+    background-color: #059400c4; /* Un azul más fuerte */
   }
   
   .error {
