--- a/src/app/registro-dialog/registro-dialog.component.html
+++ b/src/app/registro-dialog/registro-dialog.component.html
@@ -7,7 +7,7 @@
     <label for="grado">Grado al que se inscribe:</label>
     <select formControlName="grado" class="form-control" id="grado">
       <option value="Transición">Transición</option>
-      <option value="Primaria">Primaria</option>
+      <option value="Primaria">Primaria/Bachillerato</option>
     </select>
   </div>
 
